src/objects/InductedProjectTeamMembers__c.object
<CustomObject>
    <fields>
        <fullName>Induction__c</fullName>
        <label>Induction</label>
        <referenceTo>Induction__c</referenceTo>
        <relationshipLabel>Inducted Project Team Members</relationshipLabel>
        <relationshipName>InductedProjectTeamMembersInduction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProjectTeamMember__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project Team Member</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ProjectTeamMember__c.Project__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ProjectTeamMember__c</referenceTo>
        <relationshipLabel>Inducted Project Team Members</relationshipLabel>
        <relationshipName>InductedProjectTeamMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Inducted Project Team Members</relationshipLabel>
        <relationshipName>Inducted_Project_Team_Members</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TeamMember__c</fullName>
        <formula>ProjectTeamMember__r.Contact__r.FirstName + &apos; &apos; + ProjectTeamMember__r.Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Member</label>
        <type>Text</type>
    </fields>
    <label>Inducted Project Team Member</label>
    <nameField>
        <displayFormat>Member-{0}</displayFormat>
        <label>Inducted Project Team Member Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inducted Project Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>